--- a/assets/styles/header.module.css
+++ b/assets/styles/header.module.css
@@ -3,6 +3,7 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 0 40px;
+  gap: 32.58px;
 }
 
 .logo {
@@ -21,6 +22,10 @@ header {
 
 .hamburger {
   display: none;
+}
+
+.hamburger:hover {
+  cursor: pointer;
 }
 .menu {
   align-items: center;
@@ -65,9 +70,9 @@ header {
 }
 
 @media only screen and (max-width: 880px) {
-  .logo {
+  /* .logo {
     font-size: clamp(1.5rem, 0.714rem + 3.2vw, 2.25rem);
-  }
+  } */
   .menu {
     display: none;
   }
@@ -77,6 +82,10 @@ header {
 }
 
 @media only screen and (max-width: 700px) {
+  .logo {
+    font: var(--);
+  }
+
   .logo .logo__icon {
     height: 40px;
     width: 40px;
@@ -85,5 +94,11 @@ header {
   .hamburger {
     height: 40px;
     width: 40px;
+  }
+}
+
+@media only screen and (max-width: 414px) {
+  .logo {
+    font: var(--title);
   }
 }
