--- a/assets/styles/intro.module.css
+++ b/assets/styles/intro.module.css
@@ -5,12 +5,15 @@
   display: flex;
   gap: 35px;
   padding: 0 40px;
+  position: relative;
 }
 
 .intro .intro__content {
   background-image: var(--gradient-purple);
   border-radius: 25px;
   padding: 50px 50px;
+  position: relative;
+  max-width: 625px;
 }
 
 .intro__content .intro__title {
@@ -28,6 +31,7 @@
 
 .intro__subtitle .intro__subtitle-text {
   font: var(--title);
+  font-size: clamp(1.25rem, 0.9635rem + 0.5961vw, 1.5rem);
 }
 
 .intro__subtitle .intro__subtitle-image {
@@ -38,6 +42,18 @@
 .intro .intro__image {
   transform: scaleX(-1);
   max-width: 400px;
+  width: clamp(23.75rem, 23.36074rem + 1.639vw, 25rem);
+  object-fit: contain;
+}
+
+.intro__content .intro__image-mobile {
+  display: none;
+
+  max-width: 213px;
+  position: absolute;
+  top: -214px;
+  left: 50%;
+  transform: translateX(-50%) scaleX(-1);
 }
 
 .intro__content .intro__footer {
@@ -70,6 +86,10 @@
   text-wrap: nowrap;
 }
 
+.intro__button .icon-watch {
+  font-size: 36px;
+}
+
 .intro__footer .intro__button:first-child:hover {
   background-color: var(--main-orange-hover);
   cursor: pointer;
@@ -81,11 +101,7 @@
   cursor: pointer;
 }
 
-.intro__footer .intro__button:last-child:hover svg .fill-000000 {
-  fill: white;
-}
-
-@media only screen and (max-width: 880px) {
+@media only screen and (max-width: 768px) {
   .intro {
     margin-top: 52px;
     gap: 12px;
@@ -93,6 +109,11 @@
 
   .intro .intro__content {
     padding: 36px 31px;
+    max-width: 402px;
+  }
+
+  .intro__content .image__container {
+    width: 100%;
   }
 
   .intro__content .intro__subtitle {
@@ -107,12 +128,9 @@
     justify-content: space-between;
   }
 
-  .intro .intro__image {
-    max-width: 257px;
-  }
-
-  .intro__content .intro__footer {
-  }
+  /* .intro .intro__image {
+    max-width: 100%;
+  } */
 
   .intro__footer .intro__button {
     font: var(--button-small);
@@ -125,15 +143,72 @@
   .intro__footer .intro__button:last-child {
     padding: 10px 12px;
   }
+}
 
-  .intro__footer .intro__button:last-child svg {
-    height: 20px;
-    width: 20px;
+@media only screen and (max-width: 678px) {
+  .intro__subtitle .intro__subtitle-image {
+    display: none;
+  }
+
+  .intro__content .intro__footer {
+    flex-direction: column;
   }
 }
 
-@media only screen and (max-width: 700px) {
+/* @media only screen and (max-width: 1139px) and (min-width: 769px) {
+  .intro .image__container {
+    position: absolute;
+    right: 40px;
+  }
+} */
+
+@media only screen and (max-width: 414px) {
   .intro {
-    margin-top: 26px;
+    margin-top: 240px;
+    gap: unset;
+  }
+
+  .intro .intro__content {
+    padding: 73.5px 23px 27px 23px;
+    max-width: 100%;
+    width: 100%;
+  }
+
+  .intro .intro__image {
+    display: none;
+  }
+
+  .intro__content .intro__title {
+    text-align: center;
+  }
+
+  .intro__content .intro__subtitle {
+    margin-bottom: 17.5px;
+    margin-top: 6px;
+    padding: 0 15px;
+  }
+
+  .intro__subtitle .intro__subtitle-image {
+    display: none;
+  }
+
+  .intro__content .intro__image-mobile {
+    display: block;
+    height: auto;
+  }
+
+  .intro__content .intro__footer {
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+  }
+
+  .intro__footer .intro__button {
+    width: 100%;
+  }
+
+  .intro__footer .intro__button:last-child {
+    justify-content: center;
+    gap: 15px;
   }
 }
