--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Righteous&family=Ubuntu&display=swap");
 @import url(assets/styles/header.module.css);
 @import url(assets/styles/intro.module.css);
+@import url(assets/styles/footer.module.css);
+@import url(assets/fonts/style.css);
 
 :root {
   --bg-color: #1a173d;
@@ -42,13 +44,18 @@ h3 {
 }
 
 body {
-  background-color: #1a173d;
+  background-color: var(--bg-color);
   padding-top: 51px;
+  min-height: 100vh;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .container {
   max-width: 1144px;
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
   width: 100%;
 }
 
