--- a/assets/styles/opportunity.module.css
+++ b/assets/styles/opportunity.module.css
@@ -76,6 +76,10 @@
 }
 
 @media only screen and (max-width: 768px) {
+  .opportunities {
+    margin-bottom: 61px;
+  }
+
   .opportunities__title {
     font: var(--header-3);
     max-width: 478px;
@@ -119,7 +123,6 @@
 
   .opportunity__background {
     height: unset;
-
     left: 61px;
     right: 62px;
     top: 13px;
@@ -130,7 +133,7 @@
 
 @media only screen and (max-width: 611px) {
   .opportunity {
-    padding: 0 140px 0 20px;
+    padding: 0 170px 0 20px;
   }
   .opportunity__background {
     left: 0;
@@ -139,18 +142,35 @@
 
   .opportunity__image {
     right: -40px;
-    height: 200px;
-    width: 200px;
-  }
-
-  .opportunity__image:last-of-type {
-    height: 190px;
-    width: 190px;
   }
 }
 
-@media only screen and (max-width: 414px) {
-  .opportunities__title {
-    font: var(--title);
+@media only screen and (max-width: 430px) {
+  .opportunities {
+    margin-bottom: 30px;
+  }
+  .opportunity {
+    height: 290px;
+    padding: 0 22px;
+  }
+
+  .opportunity__wrapper {
+    gap: 103px;
+    margin-top: 110px;
+  }
+
+  .opportunity__image {
+    left: 50%;
+    transform: translateX(-50%);
+    top: -110px;
+  }
+
+  .opportunity__image:last-of-type {
+    height: 205px;
+    width: 205px;
+  }
+
+  .opportuniy__sub:last-of-type {
+    padding-top: 30px;
   }
 }
