--- a/assets/styles/subscribe.module.css
+++ b/assets/styles/subscribe.module.css
@@ -97,6 +97,17 @@
     top: -185px;
     height: 313px;
   }
+
+  .subscribe__title {
+    padding-right: 185px;
+  }
+
+  .subscribe__wrapper {
+    padding-right: 35px;
+  }
+  .subscribe__input {
+    max-width: 100%;
+  }
 }
 
 @media only screen and (max-width: 768px) {
