--- a/assets/styles/header.module.css
+++ b/assets/styles/header.module.css
@@ -6,6 +6,14 @@ header {
   gap: 32.58px;
 }
 
+#menu__toggle {
+  display: none;
+}
+
+.toggle__label {
+  display: none;
+}
+
 .logo {
   color: var(--main-orange);
   text-decoration: none;
@@ -18,10 +26,6 @@ header {
 .logo .logo__icon {
   height: 60px;
   width: 60px;
-}
-
-.hamburger {
-  display: none;
 }
 
 .hamburger:hover {
@@ -39,6 +43,7 @@ header {
   display: inline-block;
   position: relative;
   color: white;
+  /* overflow: hidden; */
 }
 
 .menu .menu__link:last-child {
@@ -70,13 +75,51 @@ header {
 }
 
 @media only screen and (max-width: 880px) {
-  /* .logo {
-    font-size: clamp(1.5rem, 0.714rem + 3.2vw, 2.25rem);
-  } */
   .menu {
-    display: none;
+    position: absolute;
+    top: 100px;
+    margin-top: 20px;
+    left: 0;
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    z-index: 2;
+    width: 100%;
+    background-color: var(--bg-color);
+    gap: 10px;
   }
-  .hamburger {
+
+  .menu .menu__link:not(:last-child):after {
+    bottom: 0;
+  }
+
+  .menu .menu__link {
+    justify-content: center;
+    margin: 0;
+    padding: 0.5em 0;
+  }
+
+  #menu__toggle ~ .menu {
+    display: none;
+    padding: 20px 0;
+  }
+  #menu__toggle:checked ~ .menu {
+    display: flex;
+  }
+
+  #menu__toggle ~ .menu .menu__link {
+    height: 0;
+
+    transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+  }
+
+  #menu__toggle:checked ~ .menu .menu__link {
+    height: fit-content;
+    transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+  }
+
+  .toggle__label {
     display: block;
   }
 }
@@ -94,6 +137,10 @@ header {
   .hamburger {
     height: 40px;
     width: 40px;
+  }
+
+  .menu {
+    top: 80px;
   }
 }
 
